remove test material

--- a/manifest.json
+++ b/manifest.json
@@ -57,8 +57,7 @@
       "ask": {
         "en": "Admin user"
       },
-      "example": "test",
-      "default": "test"
+      "example": "test"
     }
     ]
   }
