--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "fr": "Clone de delicious, rapide, simple et sans base de données."
   },
   "maintainer": {
-    "name": "Lapineige",
+    "name": "Lapineige"
   },
   "url": "https://github.com/shaarli/Shaarli",
   "version": "0.8.3",
