--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
     "name": "Lapineige"
   },
   "url": "https://github.com/shaarli/Shaarli",
+  "license": "free",
   "version": "0.8.3",
   "multi_instance": "true",
   "arguments": {
@@ -27,38 +28,10 @@
       "example": "domain.org"
     },
     {
-      "name": "path",
-      "type": "path",
-      "ask": {
-        "en": "Choose a path for your Shaarli",
-        "fr": "Choisissez un chemin pour votre Shaarli"
-      },
-      "example": "/shaarli",
-      "default": "/shaarli"
-    },
-    {
       "name": "is_public",
       "ask": {
         "en": "Is it a public Shaarli site ?",
         "fr": "Est-ce un site Shaarli public ?"
-      },
-      "choices": ["Yes", "No"],
-      "default": "No"
-    },
-    {
-      "name": "title",
-      "ask": {
-        "en": "Choose a title for Shaarli's page",
-        "fr": "Choissez un titre pour la page Shaarli"
-      },
-      "example": "Shaarli",
-      "default": "Shaarli"
-    },
-    {
-      "name": "privatelinkbydefault",
-      "ask": {
-        "en": "Are new links private by default ?",
-        "fr": "Les nouveaux liens sont-ils privés par défaut ?"
       },
       "choices": ["Yes", "No"],
       "default": "Yes"
@@ -79,6 +52,34 @@
         "en": "Define password for Shaarli user",
         "fr": "Définissez le mot de passe de l'utilisateur Shaarli"
       }
+    },
+    {
+      "name": "path",
+      "type": "path",
+      "ask": {
+        "en": "Choose a path for your Shaarli",
+        "fr": "Choisissez un chemin pour votre Shaarli"
+      },
+      "example": "/shaarli",
+      "default": "/shaarli"
+    },
+    {
+      "name": "title",
+      "ask": {
+        "en": "Choose a title for Shaarli's page",
+        "fr": "Choissez un titre pour la page Shaarli"
+      },
+      "example": "Shaarli",
+      "default": "Shaarli"
+    },
+    {
+      "name": "privatelinkbydefault",
+      "ask": {
+        "en": "Are new links private by default ?",
+        "fr": "Les nouveaux liens sont-ils privés par défaut ?"
+      },
+      "choices": ["Yes", "No"],
+      "default": "Yes"
     }
     ]
   }
