--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,16 @@
       "example": "domain.org"
     },
     {
+      "name": "path",
+      "type": "path",
+      "ask": {
+        "en": "Choose a path for your Shaarli",
+        "fr": "Choisissez un chemin pour votre Shaarli"
+      },
+      "example": "/shaarli",
+      "default": "/shaarli"
+    },
+    {
       "name": "is_public",
       "ask": {
         "en": "Is it a public Shaarli site ?",
@@ -35,6 +45,24 @@
       },
       "choices": ["Yes", "No"],
       "default": "No"
+    },
+    {
+      "name": "privatelinkbydefault",
+      "ask": {
+        "en": "Are new links private by default ?",
+        "fr": "Les nouveaux liens sont-ils privés par défaut ?"
+      },
+      "choices": ["Yes", "No"],
+      "default": "Yes"
+    },
+    {
+      "name": "privateinstance",
+      "ask": {
+        "en": "Is this instance private?",
+        "fr": "Cette instance est-elle privée ?"
+      },
+      "choices": ["Yes", "No"],
+      "default": "Yes"
     },
     {
       "name": "admin",
@@ -54,16 +82,6 @@
       }
     },
     {
-      "name": "path",
-      "type": "path",
-      "ask": {
-        "en": "Choose a path for your Shaarli",
-        "fr": "Choisissez un chemin pour votre Shaarli"
-      },
-      "example": "/shaarli",
-      "default": "/shaarli"
-    },
-    {
       "name": "title",
       "ask": {
         "en": "Choose a title for Shaarli's page",
@@ -71,24 +89,6 @@
       },
       "example": "Shaarli",
       "default": "Shaarli"
-    },
-    {
-      "name": "privatelinkbydefault",
-      "ask": {
-        "en": "Are new links private by default ?",
-        "fr": "Les nouveaux liens sont-ils privés par défaut ?"
-      },
-      "choices": ["Yes", "No"],
-      "default": "Yes"
-    },
-    {
-      "name": "privateinstance",
-      "ask": {
-        "en": "Is the instance private?",
-        "fr": "Cette instance est elle privée ?"
-      },
-      "choices": ["Yes", "No"],
-      "default": "Yes"
     }
     ]
   }
