Update maintainer info

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "fr": "Clone de delicious, rapide, simple et sans base de données."
   },
   "maintainer": {
-    "name": "Lapineige"
+    "name": "Lapineige, Rafi59"
   },
   "url": "https://github.com/shaarli/Shaarli",
   "license": "free",
