--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
   "maintainer": {
           "name": "Lapineige et rafi59",
-          "email": "",
+          "email": "rafi59_dev@srvmaison.fr.nf",
           "url": ""
   },
   "url": "https://github.com/shaarli/Shaarli",
