--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,4 @@
-location YNH_WWW_PATH {
+location __PATH__ {
   alias YNH_ALIAS ;
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
