--- a/manifest.json
+++ b/manifest.json
@@ -40,15 +40,15 @@
       "default": "/shaarli"
     },
     {
-      "name": "is_public",
-      "type": "boolean",
-       "ask": {
-                "en": "Is it a public Shaarli?",
-                "fr": "Est-ce un Shaarli public ?"
+                "name": "is_public",
+                "type": "boolean",
+                "ask": {
+                    "en": "Is it a public application?",
+                    "fr": "Est-ce une application publique ?"
                 },
                 "default": true
-},
-      {
+    },    
+    {
       "name": "privatelinkbydefault",
       "ask": {
         "en": "Are new links private by default ?",
