--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 location __PATH__ {
-  alias YNH_ALIAS ;
+  alias __FINALPATH__ ;
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
