--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,13 +1,18 @@
-location YNH_WWW_PATH {
-  alias YNH_ALIAS ;
+location __PATH__ {
+  
+  # Path to source
+  alias __FINALPATH__/ ;
+  
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
+  
+  # Example PHP configuration (remove if not used)
   index index.php;
   try_files $uri $uri/ index.php;
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-    fastcgi_pass unix:/var/run/php5-fpm.sock;
+    fastcgi_pass unix:/var/run/php5-fpm-__NAME__.sock;
     fastcgi_index index.php;
     include fastcgi_params;
     fastcgi_param REMOTE_USER     $remote_user;
