Update to 0.10.2, added logrotate, change url and fail2ban (#36)
* Update manifest to 0.10.2

* Update to 0.10.2

* Update ReadMe to 0.10.2

* Update to 0.10.2

* Updated is_public according to YNH 3

* Added logrotate,fail2ban

* Added dependencies and updated change_url

* Added dependencies php5-gd

* Remove ini file for php

* Removed backup of php.ini file

* Removed restore of php.ini file

--- a/manifest.json
+++ b/manifest.json
@@ -16,8 +16,8 @@
   },
   "url": "https://github.com/shaarli/Shaarli",
   "license": "free",
-  "version": "0.9.7",
-  "multi_instance": "true",
+  "version": "0.10.2",
+  "multi_instance": true,
   "services": [
         "nginx",
         "php5-fpm"
