--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,6 +10,7 @@ location __PATH__ {
   # Example PHP configuration (remove if not used)
   index index.php;
   try_files $uri $uri/ index.php;
+  client_max_body_size 50M;
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass unix:/var/run/php/php7.0-fpm-__NAME__.sock;
