--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,26 +1,35 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
 location __PATH__/ {
-  
+
   # Path to source
   alias __FINALPATH__/ ;
-  
+
+   # Force usage of https
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
-  
-  # Example PHP configuration (remove if not used)
+### Example PHP configuration (remove it if not used)
   index index.php;
-  try_files $uri $uri/ index.php;
+  if (!-f $request_filename) {
+            rewrite ^ /index.php last;
+        }
+
+# Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
   client_max_body_size 50M;
+  try_files $uri $uri/ index.php$is_args$args;
+
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-    fastcgi_pass unix:/var/run/php/php7.0-fpm-__NAME__.sock;
+    fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
+
     fastcgi_index index.php;
     include fastcgi_params;
-    fastcgi_param REMOTE_USER     $remote_user;
-    fastcgi_param PATH_INFO       $fastcgi_path_info;
+    fastcgi_param REMOTE_USER $remote_user;
+    fastcgi_param PATH_INFO $fastcgi_path_info;
     fastcgi_param SCRIPT_FILENAME $request_filename;
   }
+
+### End of PHP configuration part
 
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
