--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,7 +11,7 @@ location __PATH__/ {
 ### Example PHP configuration (remove it if not used)
   index index.php;
   if (!-f $request_filename) {
-            rewrite ^ /index.php last;
+            rewrite ^ __PATH__/index.php last;
         }
 
 # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
