--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,6 +13,8 @@ location __PATH__/ {
   if (!-f $request_filename) {
             rewrite ^ __PATH__/index.php last;
         }
+        
+  rewrite ^__PATH__/index.php$ __PATH__/index.php/install redirect;
 
   # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
   client_max_body_size 50M;
