--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,8 +13,9 @@ location __PATH__/ {
   if (!-f $request_filename) {
             rewrite ^ __PATH__/index.php last;
         }
-        
-  rewrite ^__PATH__/index.php$ __PATH__/index.php/install redirect;
+
+  #rewrite ^__PATH__/index.php$ __PATH__/index.php/install redirect;
+  try_files $uri $uri/ __PATH__/__PATH__/index.php?$query_string;
 
   # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
   client_max_body_size 50M;
