--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,11 +10,11 @@ location __PATH__/ {
   }
 
   index index.php;
-  if (!-f $request_filename) {
-            rewrite ^ __PATH__/index.php last;
-        }
 
-  #rewrite ^__PATH__/index.php$ __PATH__/index.php/install redirect;
+  #if (!-f $request_filename) {
+  #          rewrite ^ __PATH__/index.php last;
+  #     }
+
   try_files $uri $uri/ __PATH__/__PATH__/index.php?$query_string;
 
   # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
