--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,32 +4,21 @@ location __PATH__/ {
   # Path to source
   alias __FINALPATH__/ ;
 
-   # Force usage of https
+  # Force usage of https
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
 
   index index.php;
 
-  #if (!-f $request_filename) {
-  #          rewrite ^ __PATH__/index.php last;
-  #     }
+  try_files __PATH__/index.php$is_args$args;
 
-  try_files $uri $uri/ __PATH__/__PATH__/index.php?$query_string;
-
-  # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
-  client_max_body_size 50M;
-  try_files $uri $uri/ index.php$is_args$args;
-
-  location ~ [^/]\.php(/|$) {
-    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+  location ~ index\.php$ {
+    fastcgi_split_path_info ^(index.php)(/.+)$;
     fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
 
     fastcgi_index index.php;
     include fastcgi_params;
-    fastcgi_param REMOTE_USER $remote_user;
-    fastcgi_param PATH_INFO $fastcgi_path_info;
-    fastcgi_param SCRIPT_FILENAME $request_filename;
   }
 
   # Include SSOWAT user panel.
