--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,9 +9,9 @@ location __PATH__/ {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
 
-  index index.php;
+  index index.html index.php;
 
-  try_files __PATH__/index.php$is_args$args;
+  #try_files __PATH__/index.php$is_args$args;
 
   location ~ index\.php$ {
     fastcgi_split_path_info ^(index.php)(/.+)$;
