--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,8 +11,8 @@ location __PATH__/ {
 
   index index.html index.php;
 
-  #try_files __PATH__/index.php$is_args$args;
-
+  try_files $uri $uri/ /index.php?q=$uri&$args;
+  
   location ~ index\.php$ {
     fastcgi_split_path_info ^(index.php)(/.+)$;
     fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
