--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -12,13 +12,15 @@ location __PATH__/ {
   index index.html index.php;
 
   try_files $uri $uri/ /index.php?q=$uri&$args;
-  
-  location ~ index\.php$ {
-    fastcgi_split_path_info ^(index.php)(/.+)$;
+
+location ~ [^/]\.php(/|$) {
+    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
 
-    fastcgi_index index.php;
-    include fastcgi_params;
+    fastcgi_index              index.php;
+    fastcgi_param REMOTE_USER  $remote_user;
+    fastcgi_param PATH_INFO    $fastcgi_path_info;
+    include                    fastcgi_params;
   }
 
   # Include SSOWAT user panel.
