--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,29 +4,23 @@ location __PATH__/ {
   # Path to source
   alias __FINALPATH__/ ;
 
-   # Force usage of https
+  # Force usage of https
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
 
-  index index.php;
-  if (!-f $request_filename) {
-            rewrite ^ __PATH__/index.php last;
-        }
+  index index.html index.php;
 
-  # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
-  client_max_body_size 50M;
-  try_files $uri $uri/ index.php$is_args$args;
+  try_files $uri $uri/ /index.php?q=$uri&$args;
 
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
 
-    fastcgi_index index.php;
-    include fastcgi_params;
-    fastcgi_param REMOTE_USER $remote_user;
-    fastcgi_param PATH_INFO $fastcgi_path_info;
-    fastcgi_param SCRIPT_FILENAME $request_filename;
+    fastcgi_index              index.php;
+    fastcgi_param REMOTE_USER  $remote_user;
+    fastcgi_param PATH_INFO    $fastcgi_path_info;
+    include                    fastcgi_params;
   }
 
   # Include SSOWAT user panel.
