--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,18 +9,18 @@ location __PATH__/ {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
 
-  index index.html index.php;
+  index index.php;
 
-  try_files $uri $uri/ /index.php?q=$uri&$args;
+  try_files $uri $uri/ __PATH_HACK__/index.php$is_args$args;
 
   location ~ [^/]\.php(/|$) {
-    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-    fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
-
-    fastcgi_index              index.php;
-    fastcgi_param REMOTE_USER  $remote_user;
-    fastcgi_param PATH_INFO    $fastcgi_path_info;
-    include                    fastcgi_params;
+    fastcgi_split_path_info       ^(.+?\.php)(/.*)$;
+    fastcgi_pass                  unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
+    fastcgi_index                 index.php;
+    include                       fastcgi_params;
+    fastcgi_param REMOTE_USER     $remote_user;
+    fastcgi_param PATH_INFO       $fastcgi_path_info;
+    fastcgi_param SCRIPT_FILENAME $request_filename;
   }
 
   # Include SSOWAT user panel.
