--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "id": "shaarli",
   "packaging_format": 1,
   "requirements": {
-   "yunohost": ">= 3.6.5"
+   "yunohost": ">= 3.8.1"
   },
   "description": {
     "en": "The personal, minimalist, super-fast, no-database delicious clone",
@@ -16,7 +16,7 @@
   },
   "url": "https://github.com/shaarli/Shaarli",
   "license": "MIT",
-  "version": "0.10.4~ynh3",
+  "version": "0.12.0~ynh1",
   "multi_instance": true,
   "services": [
         "nginx",
@@ -44,15 +44,43 @@
       "default": "/shaarli"
     },
     {
+      "name": "admin",
+      "type": "user",
+      "ask": {
+        "en": "Choose the admin user",
+        "fr": "Choisissez l’administrateur"
+      },
+      "example": "johndoe"
+    },
+    {
+      "name": "password",
+      "type": "password",
+      "ask": {
+        "en": "Choose the admin password",
+        "fr": "Choisissez le mot de passe de l’administrateur"
+      },
+      "example": "johndoe"
+    },
+    {
+      "name": "title",
+      "type": "string",
+      "ask": {
+        "en": "Choose a title for your Shaarli instance",
+        "fr": "Choisissez un titre pour votre instance Shaarli"
+      },
+      "example": "Shaarli",
+      "default": "Shaarli"
+    },
+    {
       "name": "is_public",
       "type": "boolean",
       "ask": {
-        "en": "Is it a public Shaarli site ?",
+        "en": "Is it a public Shaarli site?",
         "fr": "Est-ce un site Shaarli public ?"
       },
       "help": {
-        "en": "If set as public, Shaarli will be visible to anyone, including non-Yunohost users. However only Shaarli users can add bookmarks. Set this to public if you want people to see your (public) bookmarks",
-        "fr": "Si configuré en public, Shaarli sera visible par tout le monde, y compris des personnes sans compte sur votre Yunohost. Cependant seules les personnes avec un compte Shaarli pourrons ajouter des marques-pages. Activer la visibilité publique si vous voulez que les gens voient vos marques-pages (publiques)."
+        "en": "If set as public, Shaarli will be visible to anyone, including non-Yunohost users. However only Shaarli users can add bookmarks. Your links will be public by default, but you can change that in Shaarli's configuration page.",
+        "fr": "Si configuré en public, Shaarli sera visible par tout le monde, y compris des personnes sans compte sur votre Yunohost. Cependant seules les personnes avec un compte Shaarli pourrons ajouter des marques-pages. Vos nouveaux liens seront publics par défaut, mais vous pourrez changer ça dans la page de configuration de Shaarli."
       },
       "default": false
     }
