--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,7 +11,7 @@ location __PATH__/ {
 
   index index.php;
 
-  try_files $uri $uri/ __PATH_HACK__/index.php$is_args$args;
+  try_files $uri $uri/ __PATH__//__PATH__/index.php$is_args$args;
 
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info       ^(.+?\.php)(/.*)$;
