--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,6 +11,10 @@ location __PATH__/ {
 
   index index.php;
 
+  if (!-f $request_filename) {
+          rewrite ^ __PATH__/index.php last;
+      }
+
   try_files $uri $uri/ __PATH__//__PATH__/index.php$is_args$args;
 
   location ~ [^/]\.php(/|$) {
