--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -14,8 +14,9 @@ location __PATH__/ {
   if (!-f $request_filename) {
           rewrite ^ __PATH__/index.php last;
       }
-
-  try_files $uri $uri/ __PATH__//__PATH__/index.php$is_args$args;
+  
+  client_max_body_size 50M;
+  try_files $uri $uri/ index.php$is_args$args;
 
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info       ^(.+?\.php)(/.*)$;
