--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,7 +11,12 @@ location __PATH__/ {
 
   index index.php;
 
-  try_files $uri $uri/ __PATH_HACK__/index.php$is_args$args;
+  if (!-f $request_filename) {
+          rewrite ^ __PATH__/index.php last;
+      }
+  
+  client_max_body_size 50M;
+  try_files $uri $uri/ index.php$is_args$args;
 
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info       ^(.+?\.php)(/.*)$;
