--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "url": "https://github.com/shaarli/Shaarli",
   "license": "MIT",
   "maintainer": {
-    "name": "Lapineige et rafi59",
+    "name": "lapineige et rafi59",
     "email": "rafi59_dev@srvmaison.fr.nf",
     "url": ""
   },
