--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,11 @@
     "en": "The personal, minimalist, super-fast, no-database delicious clone",
     "fr": "Clone de delicious, rapide, simple et sans base de données."
   },
-  "version": "0.12.1~ynh1",
+  "version": "0.12.1~ynh2",
   "url": "https://github.com/shaarli/Shaarli",
   "license": "MIT",
   "maintainer": {
-    "name": "Lapineige et rafi59",
+    "name": "lapineige et rafi59",
     "email": "rafi59_dev@srvmaison.fr.nf",
     "url": ""
   },
