Revert "Fix linter (#73)"
This reverts commit ae6795704864e061bf5a5133ffd4ddd375c676e2.

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,6 +4,11 @@ location __PATH__/ {
   # Path to source
   alias __FINALPATH__/ ;
 
+  # Force usage of https
+  if ($scheme = http) {
+    rewrite ^ https://$server_name$request_uri? permanent;
+  }
+
   index index.php;
 
   if (!-f $request_filename) {
