--- a/manifest.json
+++ b/manifest.json
@@ -1,72 +1,70 @@
 {
-  "name": "Shaarli",
-  "id": "shaarli",
-  "packaging_format": 1,
-  "description": {
-    "en": "The personal, minimalist, super-fast, no-database delicious clone",
-    "fr": "Clone de delicious, rapide, simple et sans base de données"
-  },
-  "version": "0.12.1~ynh3",
-  "url": "https://github.com/shaarli/Shaarli",
-  "upstream": {
+    "name": "Shaarli",
+    "id": "shaarli",
+    "packaging_format": 1,
+    "description": {
+        "en": "The personal, minimalist, super-fast, no-database delicious clone",
+        "fr": "Clone de delicious, rapide, simple et sans base de données"
+    },
+    "version": "0.12.1~ynh4",
+    "url": "https://github.com/shaarli/Shaarli",
+    "upstream": {
         "license": "MIT",
         "demo": "https://demo.shaarli.org/",
         "admindoc": "https://shaarli.readthedocs.io/en/master/",
         "code": "https://github.com/shaarli/Shaarli"
     },
-  "license": "MIT",
-  "maintainer": {
-    "name": "lapineige et rafi59",
-    "email": "rafi59_dev@srvmaison.fr.nf",
-    "url": ""
-  },
-  "requirements": {
-    "yunohost": ">= 4.3.0"
-  },
-  "multi_instance": true,
-  "services": [
+    "license": "MIT",
+    "maintainer": {
+        "name": "lapineige"
+    },
+    "requirements": {
+        "yunohost": ">= 4.3.0"
+    },
+    "multi_instance": true,
+    "services": [
         "nginx",
         "php7.3-fpm"
-  ],
-  "arguments": {
-    "install" : [
-    {
-      "name": "domain",
-      "type": "domain"
-    },
-    {
-      "name": "path",
-      "type": "path",
-      "example": "/shaarli",
-      "default": "/shaarli"
-    },
-    {
-      "name": "admin",
-      "type": "user"
-    },
-    {
-      "name": "password",
-      "type": "password"
-    },
-    {
-      "name": "title",
-      "type": "string",
-      "ask": {
-        "en": "Choose a title for your Shaarli instance",
-        "fr": "Choisissez un titre pour votre instance Shaarli"
-      },
-      "example": "Shaarli",
-      "default": "Shaarli"
-    },
-    {
-      "name": "is_public",
-      "type": "boolean",
-      "help": {
-        "en": "If set as public, Shaarli will be visible to anyone, including non-Yunohost users. However only Shaarli users can add bookmarks. Your links will be public by default, but you can change that in Shaarli's configuration page.",
-        "fr": "Si configuré en public, Shaarli sera visible par tout le monde, y compris des personnes sans compte sur votre Yunohost. Cependant seules les personnes avec un compte Shaarli pourrons ajouter des marques-pages. Vos nouveaux liens seront publics par défaut, mais vous pourrez changer ça dans la page de configuration de Shaarli."
-      },
-      "default": false
-      }
-    ]
-  }
+    ],
+    "arguments": {
+        "install": [
+            {
+                "name": "domain",
+                "type": "domain"
+            },
+            {
+                "name": "path",
+                "type": "path",
+                "example": "/shaarli",
+                "default": "/shaarli"
+            },
+            {
+                "name": "is_public",
+                "type": "boolean",
+                "help": {
+                    "en": "If set as public, Shaarli will be visible to anyone, including non-Yunohost users. However only Shaarli users can add bookmarks. Your links will be public by default, but you can change that in Shaarli's configuration page.",
+                    "fr": "Si configuré en public, Shaarli sera visible par tout le monde, y compris des personnes sans compte sur votre Yunohost. Cependant seules les personnes avec un compte Shaarli pourrons ajouter des marques-pages. Vos nouveaux liens seront publics par défaut, mais vous pourrez changer ça dans la page de configuration de Shaarli."
+                },
+                "default": false
+            },
+            {
+                "name": "admin",
+                "type": "user"
+            },
+            {
+                "name": "password",
+                "type": "password"
+            },
+            {
+                "name": "title",
+                "type": "string",
+                "ask": {
+                    "en": "Choose a title for your Shaarli instance",
+                    "fr": "Choisissez un titre pour votre instance Shaarli"
+                },
+                "example": "Shaarli",
+                "default": "Shaarli"
+            }
+        ]
+    }
 }
