--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,7 +7,7 @@ location __PATH__/ {
   index index.php;
 
   client_max_body_size 50M;
-  try_files $uri $uri/ index.php$is_args$args;
+  try_files $uri $uri/ index.php;
 
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
